Fix overlapping ToC and images.

--- a/www/css/style-rts.windows.css
+++ b/www/css/style-rts.windows.css
@@ -3277,6 +3277,7 @@ div.imgonly,
 figure {
 	text-align: center;
 	margin: auto;
+	clear: both;
 }
 
 // Aspect ratio trick from https://css-tricks.com/aspect-ratio-boxes/
